auth: added auth process, stored in redis

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,7 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  a(href="/legal/privacy") privacy policy
+  p
+    a(href="/auth/instagram/login") login with Instagram
+  p
+    a(href="/legal/privacy") privacy policy
